# get-papers-list

./: README.md  pyproject.toml
get_papers/: cli.py
get_papers/src/: exporter.py  fetcher.py  filters.py  parser.py  types.py
tests/: test_exporter.py  test_fetcher.py  test_filters.py  test_parser.py
